--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,28 @@
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.8.2.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>4.8.3</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <includeTests>true</includeTests>
+                    <effort>Max</effort>
+                    <threshold>Default</threshold>
+                    <failThreshold>Low</failThreshold>
+                    <excludeFilterFile>spotbugs.exclude.xml</excludeFilterFile>
+                    <htmlOutput>true</htmlOutput>
+                    <jvmArgs>-Duser.language=ja</jvmArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
